--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
             "required": "True"
         }
     },
-    "stack": "container",
+    "stack": "heroku-20",
     "buildpacks": [
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
