--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-API_ID =  # Get it by creating an app on https://my.telegram.org
-API_HASH = "" # Get it by creating an app on https://my.telegram.org
-BOT_TOKEN = "" # Get it by creating a bot on https://t.me/BotFather
-SUDO_USERS = "" # List of sudo user's id, separated by space.
+API_ID = "15411499" # Get it by creating an app on https://my.telegram.org
+API_HASH = "482e4968a9fbab2f7cb0e8ce409413d6" # Get it by creating an app on https://my.telegram.org
+BOT_TOKEN = "5279331861:AAFI5cp75kF9Lz1mHA72LLH9ZSOgfRr9euM" # Get it by creating a bot on https://t.me/BotFather
+SUDO_USERS = "1999010840" # List of sudo user's id, separated by space.
 DOWNLOAD_DIR = "downloads/" # Download directory where to download files. Must ends with forward slash > / <
